--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,5 +1,7 @@
 
 /* BASE
 =======================================================================================================================================*/
-
 @import 'base/_functions.scss';
+@import 'base/_mixins.scss';
+@import 'base/_placeholders.scss';
+@import 'base/_variables.scss';
